force-app/main/default/objects/Invoice__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Rent amount for this billing period, excluding GST. Copied from the Contract or Tenancy at invoice creation.</description>
    <label>Amount (ex GST)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>