force-app/main/default/objects/Invoice__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>Remaining balance on this invoice: Total Amount minus Total Paid. Zero or negative means the invoice is fully covered.</description>
    <formula>Total_Amount__c - NULLVALUE(Total_Paid__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>