force-app/main/default/objects/Invoice__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary Discount record applied when this invoice was generated. Null when no discount was active during the invoice period.</description>
    <label>Applied Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>