force-app/main/default/objects/Invoice__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>The total pro-rated discount applied to this invoice in dollars. Set by the invoice batch when a Discount__c record overlaps the invoice period. Null when no discount applies.</description>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>