force-app/main/default/objects/Invoice__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <description>GST component (10%) populated by a flow when the landlord Account has GST_Registered__c = true.</description>
    <label>GST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>