force-app/main/default/objects/Invoice__c/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <description>The full Contract.Rent_Amount__c before any discount was applied. Null when no discount was active. Use Discount_Amount__c to see the saving.</description>
    <label>Original Rent Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>