force-app/main/default/objects/Invoice__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End date of the billing period covered by this invoice.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>