force-app/main/default/objects/Invoice__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start date of the billing period covered by this invoice.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>