force-app/main/default/objects/Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Net amount payable on this invoice: (Rent Amount minus Discount) plus GST. This is the figure tenants must pay and that credit applications are measured against.</description>
    <formula>(Amount__c - Discount_Amount__c) + IF(ISNULL(GST_Amount__c), 0, GST_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (inc GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>