force-app/main/default/objects/Invoice__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>Sum of all Received payment amounts applied to this invoice. Maintained by PaymentTrigger on Payment insert, update, delete, and undelete.</description>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>