force-app/main/default/objects/Invoice__c/validationRules/Due_Date_Not_Before_Invoice_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_Before_Invoice_Date</fullName>
    <active>true</active>
    <description>Ensures the due date is on or after the invoice generation date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Invoice_Date__c)),
    NOT(ISBLANK(Due_Date__c)),
    Due_Date__c &lt; Invoice_Date__c
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be before the Invoice Date.</errorMessage>
</ValidationRule>