force-app/main/default/objects/Invoice__c/validationRules/Period_End_After_Period_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_End_After_Period_Start</fullName>
    <active>true</active>
    <description>Ensures the billing period end date is after the start date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Period_Start__c)),
    NOT(ISBLANK(Period_End__c)),
    Period_End__c &lt;= Period_Start__c
)</errorConditionFormula>
    <errorDisplayField>Period_End__c</errorDisplayField>
    <errorMessage>Period End date must be after Period Start date.</errorMessage>
</ValidationRule>