force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Period_End__c</columns>
    <columns>Period_Start__c</columns>
    <columns>Discount_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>